# soundsgood

./: .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  soundsgood.code-workspace
src/: AnalogStage.h  CMakeLists.txt  CS30Envelope.h  CS30Filter.cpp  CS30Filter.h  CS30LFO.h  CS30Oscillator.cpp  CS30Oscillator.h  CS30Sequencer.h  CS30Voice.cpp  CS30Voice.h  EditableComponent.h  Oversampler.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  WPPMLFO.h  WPPMOscillator.h  WPPMVoice.cpp  WPPMVoice.h
